# edgar-notebook2

./: .gitignore  README.md  fundmgr_notebook.py  main.py  pyproject.toml  settings.json  utils.py
tests/: test_utils.py
