[project]
name = "edgar-notebook2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edgar-funcs",
    "en-core-web-sm==3.8.0",
    "marimo>=0.12.8",
    "polars>=1.27.1",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
edgar-funcs = { path = "../edgar-funcs" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
env_files = [".env"]
